[package]
name = "macroquad_vector_render"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miniquad = "0.3.0-alpha.37"
macroquad = "0.3.7"
resvg = "0.15.0"
usvg = "0.15.0"
tiny-skia = "0.5.1"
nonaquad = { path="nonaquad/nonaquad" }
nona = { path="nonaquad/nona" }
